# viztra

./: .gitignore  LICENSE  NOTICES  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/: ui.mdc
docs/: architecture.md  (+1 more)
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: asset.rs  greet.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/asset/: command.rs  download.rs  file_cleanup.rs  mod.rs  model.rs  parquet_reader.rs  service.rs
src-tauri/src/features/deals/: command.rs  mod.rs  model.rs  service.rs  validator.rs
src-tauri/src/features/greet/: command.rs  mod.rs  service.rs
src-tauri/src/features/insights/: batch.rs  command.rs  factory.rs  insight_trait.rs  mod.rs  model.rs  registry.rs  trait.rs  validator.rs
src-tauri/src/features/insights/deals/: mod.rs
src-tauri/src/features/insights/deals/all_entries/: mod.rs  params.rs  query.rs
src-tauri/src/features/insights/deals/balance_entries/: mod.rs  params.rs  query.rs
src-tauri/src/features/insights/deals/profit_by_symbol/: mod.rs  params.rs  query.rs  result.rs
src-tauri/src/features/insights/deals/total_balance/: mod.rs  params.rs  query.rs  result.rs
src-tauri/src/models/: asset.rs  mod.rs
src-tauri/src/services/: asset.rs  download.rs  file_cleanup.rs  greet.rs  mod.rs  parquet_reader.rs
src-tauri/src/shared/: error.rs  mod.rs
src-tauri/src/shared/utils/: cache_dir.rs  mod.rs  validation.rs  zip_extract.rs
src-tauri/src/utils/: cache_dir.rs  mod.rs  validation.rs  zip_extract.rs
(+147 files in other folders)
